fixed bug on tablet

--- a/src/app/pages/homepage/dialog-login.component.css
+++ b/src/app/pages/homepage/dialog-login.component.css
@@ -12,7 +12,7 @@
 
 .dialog {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .form_field{
